--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -3,7 +3,7 @@
         <div class="container_checkout_center">
             <div class="logo_header">
                 <a href="#">
-                    <img src="../../img/logo.png" alt="Картинка">
+                    <img src="./img/logo.png" alt="Картинка">
                     <div class="logo_header_text">интернет-магазин косметики</div>
                 </a>
             </div>
@@ -101,30 +101,30 @@
                 <h3 class="title_footer">Скачайте наше приложение</h3>
                 <div>
                     <a href="#">
-                        <img src="../../img/svg/Google.svg" alt="Картинка">
+                        <img src="./img/svg/Google.svg" alt="Картинка">
                     </a>
                     <a href="#">
-                        <img src="../../img/svg/download-on-the-app-store-apple.svg" alt="Картинка">
+                        <img src="./img/svg/download-on-the-app-store-apple.svg" alt="Картинка">
                     </a>
                 </div>
             </div>
             <div class="social_content">
-                <h5 class="title_footer">Мы в соцеальных сетях</h4>
+                <h5 class="title_footer">Мы в соцеальных сетях</h5>
                     <ul class="social_content_list">
                         <li>
-                            <a href="#"><img src="../../img/svg/Instagram.svg" alt="Картинка"></a>
+                            <a href="#"><img src="./img/svg/Instagram.svg" alt="Картинка"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="../../img/svg/Facebook.svg" alt="Картинка"></a>
+                            <a href="#"><img src="./img/svg/Facebook.svg" alt="Картинка"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="../../img/svg/youtube.svg" alt="Картинка"></a>
+                            <a href="#"><img src="./img/svg/youtube.svg" alt="Картинка"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="../../img/svg/Telegram.svg" alt="Картинка"></a>
+                            <a href="#"><img src="./img/svg/Telegram.svg" alt="Картинка"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="../../img/svg/Viber.svg" alt="Картинка"></a>
+                            <a href="#"><img src="./img/svg/Viber.svg" alt="Картинка"></a>
                         </li>
                     </ul>
             </div>
