--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/css/mdb.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.0.2/nouislider.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.0.2/nouislider.min.css">
 
 </head>
 
@@ -142,7 +142,7 @@
                 </div>
             </div>
         </div>
-        </div>
+
         <div class="header_top">
             <div class="container container_new">
                 <ul class="header_top_nav">
@@ -202,7 +202,7 @@
                 <div class="header_bottom_head">
                     <div class="logo_header">
                         <a href="#">
-                            <img src="../../img/logo.png" alt="Картинка">
+                            <img src="./img/logo.png" alt="Картинка">
                             <div class="logo_header_text">интернет-магазин косметики</div>
                         </a>
                     </div>
@@ -255,30 +255,30 @@
                     <ul class="header_bottom_head_list">
                         <li>
                             <a href="#">
-                                <img src="../../img/svg/heart.svg" alt="Картинка">
+                                <img src="./img/svg/heart.svg" alt="Картинка">
                                 <div class="number_list">13</div>
                             </a>
                         </li>
                         <li> <a href="#">
-                                <img src="../../img/svg/compare.svg" alt="Картинка">
+                                <img src="./img/svg/compare.svg" alt="Картинка">
                                 <div class="number_list">5</div>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="../../img/svg/eye.svg" alt="Картинка">
+                                <img src="./img/svg/eye.svg" alt="Картинка">
                                 <div class="number_list">43</div>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="../../img/svg/Cart.svg" alt="Картинка">
+                                <img src="./img/svg/Cart.svg" alt="Картинка">
                                 <div class="number_list">3</div>
                             </a>
                         </li>
                         <li class="burger_menu">
-                            <img class="active" src="../../img/svg/Burger.svg" alt="Картинка">
-                            <img src="../../img/svg/close.svg" alt="Картинка">
+                            <img class="active" src="./img/svg/Burger.svg" alt="Картинка">
+                            <img src="./img/svg/close.svg" alt="Картинка">
                         </li>
                     </ul>
                 </div>
@@ -336,7 +336,7 @@
             <div class="container container_new">
                 <div class="logo_header">
                     <a href="#">
-                        <img src="../../img/logo.png" alt="Картинка">
+                        <img src="./img/logo.png" alt="Картинка">
                         <div class="logo_header_text">интернет-магазин косметики</div>
                     </a>
                 </div>
@@ -392,7 +392,7 @@
 
                     <li>
                         <a href="#">
-                            <img src="../../img/svg/Cart.svg" alt="Картинка">
+                            <img src="./img/svg/Cart.svg" alt="Картинка">
                             <div class="number_list">3</div>
                         </a>
                     </li>
