--- a/src/html/views/catalog.html
+++ b/src/html/views/catalog.html
@@ -25,7 +25,7 @@
             <form class="container_catalog_all_filter">
 
                 <div class="filter">
-                    <div class="filter_text">Фильтр <img src="../../img/svg/close.svg" alt="Картинка" /></div>
+                    <div class="filter_text">Фильтр <img src="./img/svg/close.svg" alt="Картинка" /></div>
                     <div class="price_filters">
                         <div class="price_filters_text">Цена</div>
                         <div class="range">
@@ -125,7 +125,7 @@
                         <div class="filters_select">
                             <input class="all_button" id="button_delete" type="submit" value="Применить">
                         </div>
-                        <label for="button_delete"><img src="../../img/svg/close.svg" alt="Картинка"></label>
+                        <label for="button_delete"><img src="./img/svg/close.svg" alt="Картинка"></label>
                         <input class="button_delete_click" id="button_delete" type="submit" value="Сбросить фильтр">
                     </div>
 
@@ -134,7 +134,7 @@
             <div class="container_catalog_all_items">
                 <div class="container_catalog_all_items_head d-flex">
                     <div class="filter_click">
-                        <img src="../../img/svg/Filter.svg" alt="Картинка" />
+                        <img src="./img/svg/Filter.svg" alt="Картинка" />
                         <div class="filter_click_text">Фильтр</div>
                     </div>
                     <div class="container_catalog_all_items_left d-flex align-items-center">
@@ -164,7 +164,7 @@
 
                                 <li class="page-item"><a class="page-link" href="#">17</a></li>
                                 <li class="page-item active">
-                                    <div class="page-link">25 <span class="sr-only">(current)</span></d>
+                                    <div class="page-link">25 <span class="sr-only">(current)</span></div>
                                 </li>
                                 <li class="page-item">
                                     <a class="page-link" href="#">50 <span class="sr-only">(current)</span></a>
@@ -180,7 +180,7 @@
                         <div class="items_product">
 
                             <div class="image_items">
-                                <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                                <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                             </div>
                             <div class="col-md-12 items_product_bottom">
                                 <div class="d-flex">
@@ -361,7 +361,7 @@
                         <div class="items_product">
 
                             <div class="image_items">
-                                <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                                <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                             </div>
                             <div class="col-md-12 items_product_bottom">
                                 <div class="d-flex">
@@ -542,7 +542,7 @@
                         <div class="items_product">
 
                             <div class="image_items">
-                                <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                                <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                             </div>
                             <div class="col-md-12 items_product_bottom">
                                 <div class="d-flex">
@@ -723,7 +723,7 @@
                         <div class="items_product">
 
                             <div class="image_items">
-                                <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                                <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                             </div>
                             <div class="col-md-12 items_product_bottom">
                                 <div class="d-flex">
@@ -904,7 +904,7 @@
                         <div class="items_product">
 
                             <div class="image_items">
-                                <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                                <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                             </div>
                             <div class="col-md-12 items_product_bottom">
                                 <div class="d-flex">
@@ -1085,7 +1085,7 @@
                         <div class="items_product">
 
                             <div class="image_items">
-                                <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                                <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                             </div>
                             <div class="col-md-12 items_product_bottom">
                                 <div class="d-flex">
@@ -1266,7 +1266,7 @@
                         <div class="items_product">
 
                             <div class="image_items">
-                                <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                                <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                             </div>
                             <div class="col-md-12 items_product_bottom">
                                 <div class="d-flex">
@@ -1447,7 +1447,7 @@
                         <div class="items_product">
 
                             <div class="image_items">
-                                <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                                <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                             </div>
                             <div class="col-md-12 items_product_bottom">
                                 <div class="d-flex">
@@ -1628,7 +1628,7 @@
                         <div class="items_product">
 
                             <div class="image_items">
-                                <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                                <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                             </div>
                             <div class="col-md-12 items_product_bottom">
                                 <div class="d-flex">
@@ -1809,7 +1809,7 @@
                         <div class="items_product">
 
                             <div class="image_items">
-                                <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                                <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                             </div>
                             <div class="col-md-12 items_product_bottom">
                                 <div class="d-flex">
@@ -1990,7 +1990,7 @@
                         <div class="items_product">
 
                             <div class="image_items">
-                                <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                                <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                             </div>
                             <div class="col-md-12 items_product_bottom">
                                 <div class="d-flex">
@@ -2171,7 +2171,7 @@
                         <div class="items_product">
 
                             <div class="image_items">
-                                <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                                <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                             </div>
                             <div class="col-md-12 items_product_bottom">
                                 <div class="d-flex">
@@ -2352,7 +2352,7 @@
                         <div class="items_product">
 
                             <div class="image_items">
-                                <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                                <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                             </div>
                             <div class="col-md-12 items_product_bottom">
                                 <div class="d-flex">
@@ -2533,7 +2533,7 @@
                         <div class="items_product">
 
                             <div class="image_items">
-                                <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                                <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                             </div>
                             <div class="col-md-12 items_product_bottom">
                                 <div class="d-flex">
@@ -2714,7 +2714,7 @@
                         <div class="items_product">
 
                             <div class="image_items">
-                                <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                                <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                             </div>
                             <div class="col-md-12 items_product_bottom">
                                 <div class="d-flex">
@@ -2896,7 +2896,7 @@
                     <ul class="pagination_list justify-content-center">
                         <li class="page-item disabled prev_page">
                             <a class="page-link" href="#" tabindex="-1" aria-disabled="true"><img
-                                    src="../../img/svg/arrow_paginantion.svg" alt="Картинка" /></a>
+                                    src="./img/svg/arrow_paginantion.svg" alt="Картинка" /></a>
                         </li>
                         <li class="page-item"><a class="page-link" href="#">1</a></li>
                         <li class="page-item"><a class="page-link disabled" href="#">...</a></li>
@@ -2908,7 +2908,7 @@
                         <li class="page-item"><a class="page-link disabled" href="#">...</a></li>
                         <li class="page-item"><a class="page-link" href="#">25</a></li>
                         <li class="page-item next_page">
-                            <a class="page-link" href="#"><img src="../../img/svg/arrow_paginantion.svg"
+                            <a class="page-link" href="#"><img src="./img/svg/arrow_paginantion.svg"
                                     alt="Картинка" /></a>
                         </li>
                     </ul>
