--- a/src/html/views/home.html
+++ b/src/html/views/home.html
@@ -1,5 +1,5 @@
 <% var data = {
-    title: "Max",
+    title: "Home",
     author: "Maxert"
   }; %>
 <%= _.template(require('../includes/header.html'))(data) %>
@@ -7,9 +7,9 @@
   <div class="row slider_block">
     <div class="col-md-8 col-sm-12 slider_head">
       <div class="slider_head_items d-flex">
-        <img class="img-fluid" src="../../img/MaskGroup.png" alt="Картинка">
+        <img class="img-fluid" src="./img/MaskGroup.png" alt="Картинка">
         <div class="container_right_head_text">
-          <h3>ПРОЩАЙТЕ ЧЕРНЫЕ ТОЧКИ!
+          <h2>ПРОЩАЙТЕ ЧЕРНЫЕ ТОЧКИ!
             ПРИВЕТ TAKO PORE</h2>
             <p>
               Очищай поры с помощью нашей новой коллекции Tako Pore!
@@ -18,7 +18,7 @@
       </div>
 
       <div class="slider_head_items d-flex">
-        <img class="img-fluid" src="../../img/MaskGroup.png" alt="Картинка">
+        <img class="img-fluid" src="./img/MaskGroup.png" alt="Картинка">
         <div class="container_right_head_text">
           <h3>ПРОЩАЙТЕ ЧЕРНЫЕ ТОЧКИ!
             ПРИВЕТ TAKO PORE</h3>
@@ -30,7 +30,7 @@
     </div>
     <div class="col-md-4 container_right_head align-items-center justify-content-center d-flex">
       <div class="col-img d-flex">
-        <img class="img-fluid" src="../../img/MaskGroup_two.png" alt="Картинка">
+        <img class="img-fluid" src="./img/MaskGroup_two.png" alt="Картинка">
       </div>
       <div class="d-flex flex-column justify-content-center container_right_head_text">
         <h3>УЛИТКА СУПЕРЗВЕЗДА!
@@ -45,7 +45,7 @@
     <div class="col-md-4">
       <a href="#">
         <div class="col_img">
-          <img class="img-fluid" src="../../img/image_items.png" alt="Картинка">
+          <img class="img-fluid" src="./img/image_items.png" alt="Картинка">
         </div>
         <div class="col_text text-content1">
           Маска Painting
@@ -55,7 +55,7 @@
     <div class="col-md-4">
       <a href="#">
         <div class="col_img">
-          <img class="img-fluid" src="../../img/image_items.png" alt="Картинка">
+          <img class="img-fluid" src="./img/image_items.png" alt="Картинка">
         </div>
         <div class="col_text text-content2">
           Маска Megatox
@@ -65,7 +65,7 @@
     <div class="col-md-4">
       <a href="#">
         <div class="col_img">
-          <img class="img-fluid" src="../../img/image_items.png" alt="Картинка">
+          <img class="img-fluid" src="./img/image_items.png" alt="Картинка">
         </div>
         <div class="col_text text-content3">
           Карандаш для
@@ -97,7 +97,7 @@
               Новинка
             </div>
             <div class="image_items">
-              <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+              <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
             </div>
             <div class="col-md-12 items_product_bottom">
               <div class="d-flex">
@@ -260,7 +260,7 @@
               Акции
             </div>
             <div class="image_items">
-              <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+              <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
             </div>
             <div class="col-md-12 items_product_bottom">
               <div class="d-flex">
@@ -423,7 +423,7 @@
           <div class="items_product">
 
             <div class="image_items">
-              <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+              <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
             </div>
             <div class="col-md-12 items_product_bottom">
               <div class="d-flex">
@@ -584,7 +584,7 @@
           <div class="items_product">
 
             <div class="image_items">
-              <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+              <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
             </div>
             <div class="col-md-12 items_product_bottom">
               <div class="d-flex">
@@ -751,7 +751,7 @@
               Новинка
             </div>
             <div class="image_items">
-              <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+              <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
             </div>
             <div class="col-md-12 items_product_bottom">
               <div class="d-flex">
@@ -914,7 +914,7 @@
               Акции
             </div>
             <div class="image_items">
-              <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+              <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
             </div>
             <div class="col-md-12 items_product_bottom">
               <div class="d-flex">
@@ -1077,7 +1077,7 @@
           <div class="items_product">
 
             <div class="image_items">
-              <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+              <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
             </div>
             <div class="col-md-12 items_product_bottom">
               <div class="d-flex">
@@ -1238,7 +1238,7 @@
           <div class="items_product">
 
             <div class="image_items">
-              <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+              <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
             </div>
             <div class="col-md-12 items_product_bottom">
               <div class="d-flex">
@@ -1408,7 +1408,7 @@
         <div class="items_product">
 
           <div class="image_items">
-            <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+            <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
           </div>
           <div class="col-md-12 items_product_bottom">
             <div class="d-flex">
@@ -1569,7 +1569,7 @@
         <div class="items_product">
 
           <div class="image_items">
-            <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+            <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
           </div>
           <div class="col-md-12 items_product_bottom">
             <div class="d-flex">
@@ -1730,7 +1730,7 @@
         <div class="items_product">
 
           <div class="image_items">
-            <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+            <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
           </div>
           <div class="col-md-12 items_product_bottom">
             <div class="d-flex">
@@ -1891,7 +1891,7 @@
         <div class="items_product">
 
           <div class="image_items">
-            <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+            <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
           </div>
           <div class="col-md-12 items_product_bottom">
             <div class="d-flex">
@@ -2052,7 +2052,7 @@
         <div class="items_product">
 
           <div class="image_items">
-            <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+            <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
           </div>
           <div class="col-md-12 items_product_bottom">
             <div class="d-flex">
@@ -2213,7 +2213,7 @@
         <div class="items_product">
 
           <div class="image_items">
-            <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+            <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
           </div>
           <div class="col-md-12 items_product_bottom">
             <div class="d-flex">
@@ -2374,7 +2374,7 @@
         <div class="items_product">
 
           <div class="image_items">
-            <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+            <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
           </div>
           <div class="col-md-12 items_product_bottom">
             <div class="d-flex">
@@ -2535,7 +2535,7 @@
         <div class="items_product">
 
           <div class="image_items">
-            <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+            <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
           </div>
           <div class="col-md-12 items_product_bottom">
             <div class="d-flex">
