--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -30,7 +30,7 @@
     <div class="container_checkout_center">
       <div class="logo_header">
         <a href="#">
-          <img src="../../img/logo.png" alt="Картинка">
+          <img src="./img/logo.png" alt="Картинка">
           <div class="logo_header_text">интернет-магазин косметики</div>
         </a>
       </div>
@@ -80,7 +80,7 @@
             <div class="container_checkout_select_content_text_all">Итого</div>
           </div>
           <div>
-            <div class="photo_container"><img src="../../img/image.png" alt=""></div>
+            <div class="photo_container"><img src="./img/image.png" alt=""></div>
             <div class="title_container">
               <div>Стик для век увлажняющий Tony
                 Moly Bling Cat Moisture Eye Stick
@@ -93,7 +93,7 @@
             <div class="result_container">6 090 грн.</div>
           </div>
           <div>
-            <div class="photo_container"><img src="../../img/image.png" alt=""></div>
+            <div class="photo_container"><img src="./img/image.png" alt=""></div>
             <div class="title_container">
               <div>Стик для век увлажняющий Tony
                 Moly Bling Cat Moisture Eye Stick
@@ -106,7 +106,7 @@
             <div class="result_container">6 090 грн.</div>
           </div>
           <div>
-            <div class="photo_container"><img src="../../img/image.png" alt=""></div>
+            <div class="photo_container"><img src="./img/image.png" alt=""></div>
             <div class="title_container">
               <div>Стик для век увлажняющий Tony
                 Moly Bling Cat Moisture Eye Stick
@@ -302,7 +302,7 @@
     <div class="container_checkout_center">
       <div class="logo_header">
         <a href="#">
-          <img src="../../img/logo.png" alt="Картинка">
+          <img src="./img/logo.png" alt="Картинка">
           <div class="logo_header_text">интернет-магазин косметики</div>
         </a>
       </div>
