--- a/src/html/views/items_card.html
+++ b/src/html/views/items_card.html
@@ -12,7 +12,7 @@
     </div>
     <div class="container_items_card">
         <div class="container_items_card_image">
-            <img class="img-fluid" src="../../img/image2.png" alt="Картинка">
+            <img class="img-fluid" src="./img/image2.png" alt="Картинка">
         </div>
         <div class="container_items_card_attribute">
             <h2 class="container_items_card_attribute_title">МАСЛО С ЭКСТРАКТОМ ЧЕРНОГО ЧАЯ TONY MOLY THE BLACK TEA
@@ -193,7 +193,7 @@
         <div class="container_items_card_informarion">
             <ul class="container_items_card_informarion_list">
                 <li>
-                    <div class="icon_image"><img src="../../img/svg/like.svg" alt="Картинка"></div>
+                    <div class="icon_image"><img src="./img/svg/like.svg" alt="Картинка"></div>
                     <div class="d-flex flex-column">
                         <div class="icon_image_text_head">100% ОРИГИНАЛ</div>
                         <div class="icon_image_text_bottom">Гарантия оригинальности и свежести продуктов</div>
@@ -201,7 +201,7 @@
                 </li>
                 <li>
                     <div class="icon_image">
-                        <img src="../../img/svg/Gift.svg" alt="Картинка">
+                        <img src="./img/svg/Gift.svg" alt="Картинка">
                     </div>
                     <div class="d-flex flex-column">
                         <div class="icon_image_text_head">ПОЛУЧИТЕ ПОДАРКИ!</div>
@@ -210,7 +210,7 @@
                 </li>
                 <li>
                     <div class="icon_image">
-                        <img src="../../img/svg/Delivery.svg" alt="Картинка">
+                        <img src="./img/svg/Delivery.svg" alt="Картинка">
                     </div>
                     <div class="d-flex flex-column">
                         <div class="icon_image_text_head">БЫСТРАЯ ДОСТАВКА!</div>
@@ -219,7 +219,7 @@
                 </li>
                 <li>
                     <div class="icon_image">
-                        <img src="../../img/svg/Payment.svg" alt="Картинка">
+                        <img src="./img/svg/Payment.svg" alt="Картинка">
                     </div>
                     <div class="d-flex flex-column">
                         <div class="icon_image_text_head">НАЛОЖЕННЫЙ ПЛАТЕЖ</div>
@@ -589,7 +589,7 @@
         <div class="col-md-3 ">
             <div class="items_product">
                 <div class="image_items">
-                    <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                    <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                 </div>
                 <div class="col-md-12 items_product_bottom">
                     <div class="d-flex">
@@ -764,7 +764,7 @@
             <div class="items_product">
 
                 <div class="image_items">
-                    <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                    <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                 </div>
                 <div class="col-md-12 items_product_bottom">
                     <div class="d-flex">
@@ -939,7 +939,7 @@
             <div class="items_product">
 
                 <div class="image_items">
-                    <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                    <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                 </div>
                 <div class="col-md-12 items_product_bottom">
                     <div class="d-flex">
@@ -1114,7 +1114,7 @@
             <div class="items_product">
 
                 <div class="image_items">
-                    <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                    <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                 </div>
                 <div class="col-md-12 items_product_bottom">
                     <div class="d-flex">
@@ -1294,7 +1294,7 @@
                 <div class="items_product">
 
                     <div class="image_items">
-                        <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                        <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                     </div>
                     <div class="col-md-12 items_product_bottom">
                         <div class="d-flex">
@@ -1470,7 +1470,7 @@
                 <div class="items_product">
 
                     <div class="image_items">
-                        <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                        <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                     </div>
                     <div class="col-md-12 items_product_bottom">
                         <div class="d-flex">
@@ -1646,7 +1646,7 @@
                 <div class="items_product">
 
                     <div class="image_items">
-                        <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                        <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                     </div>
                     <div class="col-md-12 items_product_bottom">
                         <div class="d-flex">
@@ -1822,7 +1822,7 @@
                 <div class="items_product">
 
                     <div class="image_items">
-                        <a href="#"><img class="img-fluid" src="../../img/items_image.png" alt=""></a>
+                        <a href="#"><img class="img-fluid" src="./img/items_image.png" alt=""></a>
                     </div>
                     <div class="col-md-12 items_product_bottom">
                         <div class="d-flex">
